testsuite/tests/properties/invalid_enum_nodes/test.out
== bad_alt/test.lkt ==
test.lkt:5:24: error: no such alternative
5 |         case _: OpKind.Baz => 1
  |                        ^^^


== correct/test.lkt ==
Code generation was successful

== not_enum_node/test.lkt ==
test.lkt:5:17: error: base enum node expected
5 |         case _: Example.Foo => 1
  |                 ^^^^^^^


== not_node/test.lkt ==
test.lkt:5:17: error: base enum node expected
5 |         case _: Int.Foo => 1
  |                 ^^^


lkt_compile: Done
